api/src/graph/snapshots/hopr_api__graph__costs__tests__return_first_edge_negative_when_no_capacity.snap
---
source: api/src/graph/costs.rs
expression: "CostResult\n{ observations: obs, initial_cost: 1.0, path_index: 0, result_cost: cost }"
---
observations:
  immediate:
    connected: true
    score: 0.95
    ack_rate: 0.9
  intermediate: ~
initial_cost: 1
path_index: 0
result_cost: -1
